src/objects/AccountAddress__c.object
<CustomObject>
    <description>SFDC1-205 This holds multiple accounts related to an Account.</description>
    <fields>
        <fullName>AddressCountry__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-394 use lookup to Country object to prevent creating Additional Addresses in prohibited country</description>
        <inlineHelpText>Please enter country for this address.</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>SFDC1-205 To capture City of the address</description>
        <inlineHelpText>Enter city</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataGovernanceNotes__c</fullName>
        <description>SFDC1-1029 Data Governance Notes, new field on the additional address object which will allow the Data Governance user to add notes about researching the address. This field will be used the same as the Data Governance notes field found on the account.</description>
        <label>Account Governance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataGovernanceStatus__c</fullName>
        <label>Account Governance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Governed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeptMailStop__c</fullName>
        <label>Dept/MailStop</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDAccountAddress__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>AAd{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID AccountAddress</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>SFDC1-205 capture postal/zip code related to address</description>
        <inlineHelpText>Enter postal/Zip code</inlineHelpText>
        <label>zzPostal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <description>SFDC1-205 capture state of the address</description>
        <inlineHelpText>Enter state</inlineHelpText>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>SFDC1-205 capture state of the address</description>
        <inlineHelpText>Enter state</inlineHelpText>
        <label>zzState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <description>SFDC1-205 capture first address line of the address</description>
        <inlineHelpText>Enter first address line</inlineHelpText>
        <label>Street 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <description>SFDC1-205 to capture second address line of the address</description>
        <inlineHelpText>Enter second address line</inlineHelpText>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <description>SFDC1-205 capture postal/zip code related to address</description>
        <inlineHelpText>Enter postal/Zip code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Addresses</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Street1__c</columns>
        <columns>Street2__c</columns>
        <columns>DeptMailStop__c</columns>
        <columns>City__c</columns>
        <columns>StateProvince__c</columns>
        <columns>AddressCountry__c</columns>
        <columns>ZipPostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DataGovernanceStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>New Addresses</label>
    </listViews>
    <nameField>
        <label>Address Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PreventProhibitedCountriedFromSelection</fullName>
        <active>true</active>
        <description>SFDC1-394 Prevent creating Additional Addresses in prohibited country</description>
        <errorConditionFormula>AddressCountry__r.IsProhibited__c</errorConditionFormula>
        <errorDisplayField>AddressCountry__c</errorDisplayField>
        <errorMessage>Due to U.S. export controls and sanctions restrictions, Address records cannot be created for the selected country.</errorMessage>
    </validationRules>
</CustomObject>